working on enabling passthrough of vcf paths as strings and explicity header setting